--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cypress-laravel",
-  "version": "0.2.1",
+  "version": "0.2.1p1",
   "description": "Cypress plugin to test Laravel applications",
   "main": "dist/cypress-laravel.common.js",
   "module": "dist/cypress-laravel.esm.js",
@@ -31,13 +31,10 @@
   },
   "homepage": "https://github.com/NoelDeMartin/cypress-laravel",
   "devDependencies": {
-    "cross-env": "^6.0.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
-  "dependencies": {
-    "cypress": "^3.6.1"
-  }
+  "dependencies": {}
 }
